--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,31 @@
-page-home {
-
+.grilla {
+    background: red;
+    
+    
 }
+.fila{
+    height: 100%;
+}
+h1,h2 {
+    color: white
+}
+.vot1{
+    background: blue !important;
+    
+}
+.vot2{
+    background: green !important;
+    
+}
+.imagen {
+    max-height: 400px;
+}
+/*
+ion-row{
+    height: 98%
+}
+
+ion-card{
+    height: 98%
+}
+*/
