--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -14,3 +14,32 @@
 // To declare rules for a specific mode, create a child rule
 // for the .md, .ios, or .wp mode classes. The mode class is
 // automatically applied to the <body> element in the app.
+    #rounded {
+        width: 100%;
+        height: 100px;
+        -moz-border-radius: 50px;
+        -webkit-border-radius: 50px;
+        border-radius: 10px;
+        margin-bottom: 10px;  
+    }
+.alertCustomCss {
+    // text color for basic alerts
+    color: white; 
+
+    // alert modal page bg color. Warning this will remove the alert transparency
+    background-color: color($colors, dark, base); 
+
+    button {
+        color: white !important; // button text color
+        background-color: color($colors, secondary, base) !important;
+            //button bg color
+    }
+
+    .alert-message {
+        color: white; // text color for confirm alerts
+    }
+
+    .alert-wrapper {
+        background-color: color($colors, dark, base); // bg color of alert content
+    }
+  }
