falta arreglar alertas

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -17,6 +17,12 @@ h1,h2 {
     background: green !important;
     
 }
+.footer1 {
+    background-color: blue;
+}
+.footer2 {
+    background-color: green;
+}
 .imagen {
     max-height: 400px;
 }
