agrego clase para vista landscape

--- a/src/pages/login/login.scss
+++ b/src/pages/login/login.scss
@@ -11,3 +11,7 @@ page-login {
         background-color: aquamarine;
     }
 }
+.imgLogin{
+    height:60vh !important;
+    width: auto !important;
+}
